--- a/.buildkite/hardware_tests/ascend_npu.yaml
+++ b/.buildkite/hardware_tests/ascend_npu.yaml
@@ -4,5 +4,6 @@ steps:
   - label: "Ascend NPU Test"
     soft_fail: true
     timeout_in_minutes: 20
+    no_plugin: true
     device: ascend_npu
     command: bash .buildkite/scripts/hardware_ci/run-npu-test.sh
