--- a/.buildkite/hardware_tests/arm.yaml
+++ b/.buildkite/hardware_tests/arm.yaml
@@ -3,4 +3,5 @@ steps:
   - label: "Arm CPU Test"
     soft_fail: true
     device: arm_cpu
+    no_plugin: true
     command: bash .buildkite/scripts/hardware_ci/run-cpu-test-arm.sh
