--- a/.buildkite/hardware_tests/ascend_npu.yaml
+++ b/.buildkite/hardware_tests/ascend_npu.yaml
@@ -6,4 +6,5 @@ steps:
     timeout_in_minutes: 20
     no_plugin: true
     device: ascend_npu
-    command: bash .buildkite/scripts/hardware_ci/run-npu-test.sh
+    commands: 
+    - bash .buildkite/scripts/hardware_ci/run-npu-test.sh
