--- a/.buildkite/hardware_tests/gh200.yaml
+++ b/.buildkite/hardware_tests/gh200.yaml
@@ -5,4 +5,6 @@ steps:
     device: gh200
     no_plugin: true
     optional: true
-    command: nvidia-smi && bash .buildkite/scripts/hardware_ci/run-gh200-test.sh
+    commands: 
+    - nvidia-smi 
+    - bash .buildkite/scripts/hardware_ci/run-gh200-test.sh
