--- a/.buildkite/hardware_tests/intel.yaml
+++ b/.buildkite/hardware_tests/intel.yaml
@@ -5,16 +5,19 @@ steps:
     soft_fail: true
     device: intel_cpu
     no_plugin: true
-    command: bash .buildkite/scripts/hardware_ci/run-cpu-test.sh
+    commands: 
+    - bash .buildkite/scripts/hardware_ci/run-cpu-test.sh
   
   - label: "Intel HPU Test"
     soft_fail: true
     device: intel_hpu
     no_plugin: true
-    command: bash .buildkite/scripts/hardware_ci/run-hpu-test.sh
+    commands: 
+    - bash .buildkite/scripts/hardware_ci/run-hpu-test.sh
 
   - label: "Intel GPU Test"
     soft_fail: true
     device: intel_gpu
     no_plugin: true
-    command: bash .buildkite/scripts/hardware_ci/run-xpu-test.sh
+    commands: 
+    - bash .buildkite/scripts/hardware_ci/run-xpu-test.sh
