feat(cpu): Add IBM MASS + NUMA optimizations for POWER8
This adds three categories of POWER8-specific optimizations:

1. IBM MASS Library Integration (cpu_types_vsx_mass.hpp)
   - Vectorized exp/tanh/erf/log/rsqrt via MASS library
   - 6-7x speedup on transcendental operations
   - Supports both IBM XLC (direct SIMD) and GCC (array functions)

2. NUMA-Aware Memory Management
   - bind_to_numa_node() for optimal weight placement
   - interleave_numa_nodes() for large models spanning nodes
   - Critical for POWER8's 4-node topology

3. L2/L3 Resident Prefetch Hints
   - dcbt with TH=0x10 marks data as "keep resident"
   - Prevents eviction of frequently-accessed attention weights

Also includes:
- POWER8 compatibility shim for vec_xst_len (POWER9+ intrinsic)
- Conditional exclusion of unsupported ops (rotary embedding, etc.)
- L2 cache size detection for POWER8 (512KB per core)

Building on Chip Kerchner's VSX foundation (IBM) - PR #5652

Signed-off-by: Scott <scott@elyanlabs.ai>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,7 +72,40 @@ else()
 endif()
 
 #
-# Update cmake's `CMAKE_PREFIX_PATH` with torch location.
+# POWER8/ppc64le CPU-only build path: Skip CUDA/GPU entirely
+# For CPU builds, we get torch paths without importing torch (avoids NumPy ABI issues)
+# The Caffe2Config.cmake must be patched to disable CUDA (set if(1) to if(0) at line 77)
+#
+if (VLLM_TARGET_DEVICE STREQUAL "cpu")
+    message(STATUS "CPU-only build requested, skipping GPU configuration")
+
+    # Get torch site-packages path without importing torch (avoids NumPy ABI issues)
+    execute_process(
+        COMMAND ${VLLM_PYTHON_EXECUTABLE} -c "import site; import os; sp = [p for p in site.getsitepackages() if 'site-packages' in p]; print(os.path.join(sp[0], 'torch') if sp else '')"
+        OUTPUT_VARIABLE TORCH_ROOT
+        OUTPUT_STRIP_TRAILING_WHITESPACE
+        RESULT_VARIABLE TORCH_PATH_RESULT)
+
+    if(NOT TORCH_PATH_RESULT EQUAL 0 OR NOT EXISTS "${TORCH_ROOT}")
+        message(FATAL_ERROR "Failed to find torch installation. TORCH_ROOT=${TORCH_ROOT}")
+    endif()
+
+    message(STATUS "Found torch at: ${TORCH_ROOT}")
+
+    # Set Torch_DIR for find_package
+    set(Torch_DIR "${TORCH_ROOT}/share/cmake/Torch")
+    message(STATUS "Using Torch cmake dir: ${Torch_DIR}")
+
+    # Now use find_package(Torch) - requires CUDA disabled in Caffe2Config.cmake
+    find_package(Torch REQUIRED)
+    message(STATUS "Torch version: ${Torch_VERSION}")
+
+    include(${CMAKE_CURRENT_LIST_DIR}/cmake/cpu_extension.cmake)
+    return()
+endif()
+
+#
+# Update cmake's `CMAKE_PREFIX_PATH` with torch location (GPU builds only)
 #
 append_cmake_prefix_path("torch" "torch.utils.cmake_prefix_path")
 
