move grpc protobuf compilation to setup
Signed-off-by: Chang Su <chang.s.su@oracle.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ requires = [
     "torch == 2.9.1",
     "wheel",
     "jinja2",
+    "grpcio-tools>=1.75.1",
 ]
 build-backend = "setuptools.build_meta"
 
