--- a/.buildkite/test-pipeline.yaml
+++ b/.buildkite/test-pipeline.yaml
@@ -1344,7 +1344,7 @@ steps:
   - csrc/
   - vllm/model_executor/layers/quantization
   commands:
-    - pytest -s -v test_lm_eval_correctness.py --config-list-file=configs/models-large-hopper.txt --tp-size=4
+    - pytest -s -v test_lm_eval_correctness.py --config-list-file=configs/moe-refactor/configs-h100.txt --tp-size 2
 
 ##### H200 test #####
 - label: Distributed Tests (H200) # optional
