--- a/tests/evals/gsm8k/configs/moe-refactor/Mixtral-8x7B-Fp8-AutoFp8-fi-cutlass.yaml
+++ b/tests/evals/gsm8k/configs/moe-refactor/Mixtral-8x7B-Fp8-AutoFp8-fi-cutlass.yaml
@@ -3,7 +3,7 @@
 # accuracy_threshold: 0.62
 # num_questions: 1319
 # num_fewshot: 5
-# server_args: "--enforce-eager --max-model-len 8192"
+# server_args: "--enforce-eager --max-model-len 8192 --tensor-parallel-size 2"
 # env:
 #   VLLM_USE_FLASHINFER_MOE_FP8: "1"
 #   VLLM_FLASHINFER_MOE_BACKEND: "throughput"
