--- a/.buildkite/test-pipeline.yaml
+++ b/.buildkite/test-pipeline.yaml
@@ -1423,7 +1423,7 @@ steps:
   commands:
     - pytest -s -v evals/gsm8k/test_gsm8k_correctness.py --config-list-file=evals/gsm8k/configs/moe-refactor/config-b200.txt
 
-- label: MoE Refactor Integration Test (B200 DP/EP - TEMPORARY) # optional
+- label: MoE Refactor Integration Test (B200 DP - TEMPORARY) # optional
   gpu: b200
   optional: true
   num_gpus: 2
