--- a/.buildkite/test-amd.yaml
+++ b/.buildkite/test-amd.yaml
@@ -520,7 +520,7 @@ steps:
   - tests/conftest.py
   commands:
     - pytest -v -s -m 'not skip_v1' samplers
-    - VLLM_USE_FLASHINFER_SAMPLER=1 pytest -v -s 'not skip_v1' samplers
+    - VLLM_USE_FLASHINFER_SAMPLER=1 pytest -v -s -m 'not skip_v1' samplers
 
 - label: LoRA Test %N # 20min each
   timeout_in_minutes: 30
